[gd_scene load_steps=15 format=3 uid="uid://bm6wphxe2cq13"]

[ext_resource type="Script" uid="uid://080du8uqvljt" path="res://Scripts/invaderconfig.gd" id="1_5u2tg"]
[ext_resource type="FontFile" uid="uid://c1kmxus5f1lpd" path="res://Assets/Fontes/Chakra_Petch/ChakraPetch-Bold.ttf" id="2_4xneg"]
[ext_resource type="FontFile" uid="uid://b8shucnl2e6uq" path="res://Assets/Fontes/Chakra_Petch/ChakraPetch-Medium.ttf" id="3_tl5q0"]
[ext_resource type="PackedScene" uid="uid://ckpofjs52ps2h" path="res://Cenas/background.tscn" id="4_3a6gk"]
[ext_resource type="PackedScene" uid="uid://cuvibs4p4eumo" path="res://Cenas/ship_sprite.tscn" id="5_4xneg"]
[ext_resource type="Material" uid="uid://cc0gc2o8ykp27" path="res://Recursos/Smoke/BIGsmokeprocessmaterial.tres" id="6_57a4q"]
[ext_resource type="PackedScene" uid="uid://cgqjw2k1gvvoy" path="res://Recursos/Smoke/smokelineparticle.res" id="8_cg5sm"]
[ext_resource type="Script" uid="uid://cnkaeni1jtsgi" path="res://Scripts/shot_sprite.gd" id="9_ctuie"]
[ext_resource type="Texture2D" uid="uid://bfy3scykfle0p" path="res://Assets/Sprites/Tiro.png" id="9_no2dv"]
[ext_resource type="Material" uid="uid://dq2birj40bni4" path="res://Recursos/Bullet/BIGbulletprocessmaterial.tres" id="10_1p37v"]
[ext_resource type="PackedScene" uid="uid://df3akxpxcdavy" path="res://Recursos/Bullet/bullettrailparticle.res" id="10_lvtaj"]
[ext_resource type="Texture2D" uid="uid://bpoagj38ti6yf" path="res://Assets/Sprites/TiroCarregado.png" id="11_ctuie"]
[ext_resource type="Material" uid="uid://02dgwll46ya6" path="res://Recursos/Bullet/BIGchargedbulletprocessmaterial.tres" id="12_3cc11"]

[sub_resource type="Theme" id="Theme_o6csk"]
default_font = ExtResource("3_tl5q0")
default_font_size = 19

[node name="InvaderConfig" type="Node2D"]
script = ExtResource("1_5u2tg")

[node name="Menu" type="CanvasLayer" parent="."]

[node name="Stars" type="PanelContainer" parent="Menu"]
offset_left = 36.0
offset_top = 45.0
offset_right = 322.0
offset_bottom = 207.0
metadata/_edit_group_ = true

[node name="Linhas" type="VBoxContainer" parent="Menu/Stars"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/Stars/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4xneg")
theme_override_font_sizes/font_size = 33
text = "ESTRELAS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Stars/Linhas"]
layout_mode = 2

[node name="R" type="SpinBox" parent="Menu/Stars/Linhas/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "R"

[node name="G" type="SpinBox" parent="Menu/Stars/Linhas/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "G"

[node name="B" type="SpinBox" parent="Menu/Stars/Linhas/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "B"

[node name="Label2" type="Label" parent="Menu/Stars/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
text = "Opacidade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="A" type="HSlider" parent="Menu/Stars/Linhas"]
layout_mode = 2
max_value = 255.0
rounded = true

[node name="Sky" type="PanelContainer" parent="Menu"]
offset_left = 36.0
offset_top = 232.0
offset_right = 322.0
offset_bottom = 332.0
size_flags_vertical = 0
metadata/_edit_group_ = true

[node name="Linhas" type="VBoxContainer" parent="Menu/Sky"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Menu/Sky/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4xneg")
theme_override_font_sizes/font_size = 33
text = "ESPAÇO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Sky/Linhas"]
layout_mode = 2

[node name="R" type="SpinBox" parent="Menu/Sky/Linhas/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "R"

[node name="G" type="SpinBox" parent="Menu/Sky/Linhas/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "G"

[node name="B" type="SpinBox" parent="Menu/Sky/Linhas/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "B"

[node name="Res" type="PanelContainer" parent="Menu"]
offset_left = 36.0
offset_top = 357.0
offset_right = 322.0
offset_bottom = 492.0
size_flags_vertical = 0
metadata/_edit_group_ = true

[node name="Linhas" type="VBoxContainer" parent="Menu/Res"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/Res/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4xneg")
theme_override_font_sizes/font_size = 33
text = "RESOLUÇÃO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="Menu/Res/Linhas"]
custom_minimum_size = Vector2(225, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
alignment = 1

[node name="OptionButton2" type="OptionButton" parent="Menu/Res/Linhas"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
alignment = 1
selected = 0
item_count = 1
popup/item_0/text = "Selecionar Modo"
popup/item_0/id = 0

[node name="Ship" type="PanelContainer" parent="Menu"]
offset_left = 365.0
offset_top = 45.0
offset_right = 683.0
offset_bottom = 605.0
size_flags_vertical = 0
metadata/_edit_group_ = true

[node name="Linhas" type="VBoxContainer" parent="Menu/Ship"]
layout_mode = 2

[node name="Header" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4xneg")
theme_override_font_sizes/font_size = 33
text = "NAVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubHeader1" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
text = "Contorno da Nave"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/Ship/Linhas"]
layout_mode = 2
alignment = 1

[node name="R" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "R"

[node name="G" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "G"

[node name="B" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "B"

[node name="Space" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubHeader2" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
text = "Preenchimento da Nave"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu/Ship/Linhas"]
layout_mode = 2
alignment = 1

[node name="R" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer3"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "R"

[node name="G" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer3"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "G"

[node name="B" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer3"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "B"

[node name="Label5" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
text = "Opacidade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="A3" type="HSlider" parent="Menu/Ship/Linhas"]
layout_mode = 2
max_value = 255.0
rounded = true

[node name="Space1" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubHeader3" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
text = "Cor dos Tiros"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Menu/Ship/Linhas"]
layout_mode = 2
alignment = 1

[node name="R" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer4"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "R"

[node name="G" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer4"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "G"

[node name="B" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer4"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "B"

[node name="Space2" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubHeader4" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
text = "Cor Inicial da Fumaça"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Menu/Ship/Linhas"]
layout_mode = 2
alignment = 1

[node name="R" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer5"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "R"

[node name="G" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer5"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "G"

[node name="B" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer5"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "B"

[node name="Space3" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubHeader5" type="Label" parent="Menu/Ship/Linhas"]
modulate = Color(0.666569, 0.666569, 0.666569, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tl5q0")
theme_override_font_sizes/font_size = 19
text = "Cor Final da Fumaça"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="Menu/Ship/Linhas"]
layout_mode = 2
alignment = 1

[node name="R" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer6"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "R"

[node name="G" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer6"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "G"

[node name="B" type="SpinBox" parent="Menu/Ship/Linhas/HBoxContainer6"]
layout_mode = 2
theme = SubResource("Theme_o6csk")
max_value = 255.0
rounded = true
alignment = 2
update_on_text_changed = true
suffix = "B"

[node name="Background" parent="." instance=ExtResource("4_3a6gk")]
z_index = -2
metadata/_edit_lock_ = true

[node name="LSmoke" parent="." instance=ExtResource("8_cg5sm")]
position = Vector2(729, 428)
scale = Vector2(11, 11)
amount = 11
lifetime = 0.2
speed_scale = 0.95
explosiveness = 0.05
process_material = ExtResource("6_57a4q")

[node name="RSmoke" parent="." instance=ExtResource("8_cg5sm")]
position = Vector2(861, 428)
scale = Vector2(11, 11)
amount = 11
lifetime = 0.2
speed_scale = 0.95
explosiveness = 0.05
process_material = ExtResource("6_57a4q")

[node name="CSmoke1" parent="." instance=ExtResource("8_cg5sm")]
position = Vector2(806, 397)
scale = Vector2(11, 11)
lifetime = 0.5
speed_scale = 0.95
explosiveness = 0.05
process_material = ExtResource("6_57a4q")

[node name="CSmoke2" parent="." instance=ExtResource("8_cg5sm")]
position = Vector2(786, 397)
scale = Vector2(11, 11)
lifetime = 0.5
speed_scale = 0.95
explosiveness = 0.05
process_material = ExtResource("6_57a4q")

[node name="ShipSprite" parent="." instance=ExtResource("5_4xneg")]
position = Vector2(795, 335)
scale = Vector2(11, 11)

[node name="SpriteTiro" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(795, 203)
scale = Vector2(9, 9)
texture = ExtResource("9_no2dv")
script = ExtResource("9_ctuie")

[node name="BulletTrail" parent="SpriteTiro" instance=ExtResource("10_lvtaj")]
process_material = ExtResource("10_1p37v")

[node name="SpriteTiroCarregado" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(795, 104)
scale = Vector2(9, 9)
texture = ExtResource("11_ctuie")
script = ExtResource("9_ctuie")

[node name="BulletTrail" parent="SpriteTiroCarregado" instance=ExtResource("10_lvtaj")]
position = Vector2(0, -1)
amount = 15
lifetime = 0.25
process_material = ExtResource("12_3cc11")

[connection signal="value_changed" from="Menu/Stars/Linhas/HBoxContainer/R" to="." method="_on_starR_value_changed"]
[connection signal="value_changed" from="Menu/Stars/Linhas/HBoxContainer/G" to="." method="_on_starG_value_changed"]
[connection signal="value_changed" from="Menu/Stars/Linhas/HBoxContainer/B" to="." method="_on_starB_value_changed"]
[connection signal="value_changed" from="Menu/Stars/Linhas/A" to="." method="_on_starA_value_changed"]
[connection signal="value_changed" from="Menu/Sky/Linhas/HBoxContainer/R" to="." method="_on_skyR_value_changed"]
[connection signal="value_changed" from="Menu/Sky/Linhas/HBoxContainer/G" to="." method="_on_skyG_value_changed"]
[connection signal="value_changed" from="Menu/Sky/Linhas/HBoxContainer/B" to="." method="_on_skyB_value_changed"]
[connection signal="item_selected" from="Menu/Res/Linhas/OptionButton" to="." method="_on_resolution_item_selected"]
[connection signal="item_selected" from="Menu/Res/Linhas/OptionButton2" to="." method="_on_windowmode_item_selected"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer2/R" to="." method="_on_shipOutlineR_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer2/G" to="." method="_on_shipOutlineG_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer2/B" to="." method="_on_shipOutlineB_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer3/R" to="." method="_on_shipFillR_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer3/G" to="." method="_on_shipFillG_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer3/B" to="." method="_on_shipFillB_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/A3" to="." method="_on_shipFillA_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer4/R" to="." method="_on_shipShotR_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer4/G" to="." method="_on_shipShotG_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer4/B" to="." method="_on_shipShotB_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer5/R" to="." method="_on_smoke1R_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer5/G" to="." method="_on_smoke1G_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer5/B" to="." method="_on_smoke1B_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer6/R" to="." method="_on_smoke2R_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer6/G" to="." method="_on_smoke2G_value_changed"]
[connection signal="value_changed" from="Menu/Ship/Linhas/HBoxContainer6/B" to="." method="_on_smoke2B_value_changed"]
